--- a/ipynb/girl_scouts_coding_for_good_website_tutorial.ipynb
+++ b/ipynb/girl_scouts_coding_for_good_website_tutorial.ipynb
@@ -6,7 +6,7 @@
       "name": "girl_scouts_coding_for_good_website_tutorial.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMHng13PlFluguIBY9MHE7K",
+      "authorship_tag": "ABX9TyN+FQgvwi2DNxs1K0cLVwGJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -396,7 +396,24 @@
       "source": [
         "## Update the Cats and Dogs Images Array using Functions and For Loops\n",
         "\n",
-        "### Review an Example\n"
+        "Remember that the cat_images and dog_images arrays contain both cats and dogs.  Let's fix that.  We are going to define a function that takes in animal type as a parameter, and returns images of that animal type.  We will then call the functions to set the cat_images and dog_images arrays.\n",
+        "\n",
+        "### Review an Example\n",
+        "\n",
+        "Before we start writing the function, let's review the following code block as an example. Note:\n",
+        "\n",
+        "* How the function is declared\n",
+        "  * start with \"def\"\n",
+        "  * next name your function\n",
+        "  * next use parenthesis with the parameter(s) in the parenthesis\n",
+        "  * end the first line with a \":\"\n",
+        "* What is the parameter passed in\n",
+        "* How a new_images array is declared and initialized \n",
+        "* How we use a for loop to interate through the all_images array \n",
+        "* How we use the dictionary get function to pass the key and look up the corresponding value\n",
+        "* How we use an if condition to see the length of characters in the caption\n",
+        "* How we use the array append function to add the image dictionary if there's a match \n",
+        "* How the function returns the new_images array\n"
       ]
     },
     {
@@ -424,8 +441,21 @@
         "id": "aUO_CnIbdDNS"
       },
       "source": [
-        "### Your Turn\n",
-        "\n"
+        "### Now it's Your Turn\n",
+        "\n",
+        "Define a function that takes in the animal type as parameter and returns list of images of that animal type.\n",
+        "\n",
+        "The function:\n",
+        "\n",
+        "* initializes a local array\n",
+        "* loops through all_images \n",
+        "* for each item in all_images\n",
+        "  * check to see if the item's type is equal to the animal type passed in (hint: search for \"python is equal\" on the web)\n",
+        "  * if so, add it to local array\n",
+        "  * otherwise, do nothing\n",
+        "* returns the local array as the result of the function\n",
+        "\n",
+        "After you write your code, run the code block to see if the three arrays return the right animal images.\n"
       ]
     },
     {
@@ -435,14 +465,6 @@
       },
       "source": [
         "# define a function that takes in the animal type as parameter and returns list of images of that animal type\n",
-        "# the function\n",
-        "# * initializes a local array\n",
-        "# * loops through all_images \n",
-        "# * for each item in all_images\n",
-        "#   - check to see if the item's type is equal to the animal type passed in\n",
-        "#   - if so, add it to local array\n",
-        "#   - otherwise, do nothing\n",
-        "# * returns the local array as the result of the function\n",
         "\n",
         "#\n",
         "# your code here\n",
@@ -470,6 +492,22 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FuqupYRXjMTH"
+      },
+      "source": [
+        "Some tips and tricks if you run into trouble: \n",
+        "\n",
+        "* Remember it's ok if it doesn't work the first time you try it\n",
+        "* Read the error message to understand what went wrong and what you need to fix\n",
+        "* You can try different things and experiment\n",
+        "* You can start by doing something simpler and get that working first, and then build on top of it.\n",
+        "* For example, you can first write the function to return all_images, then you can update to a for loop that copies each item in the for loop, and then you can add the if condition.\n",
+        "* If you're not sure how to do something, you can google it, or ask for help."
+      ]
     },
     {
       "cell_type": "markdown",
