--- a/ipynb/girl_scouts_coding_for_good_website_tutorial.ipynb
+++ b/ipynb/girl_scouts_coding_for_good_website_tutorial.ipynb
@@ -6,7 +6,7 @@
       "name": "girl_scouts_coding_for_good_website_tutorial.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN+FQgvwi2DNxs1K0cLVwGJ",
+      "authorship_tag": "ABX9TyOe1Tndk8cIJq3U8uGh9nxY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -228,14 +228,16 @@
         "* Notice in the Elements tab, you can see the html and css for the page\n",
         "* Notice in the Network tab, you can see the client/server requests/responses\n",
         "\n",
+        "(Explore how website works by using the Network and Elements tabs here.)\n",
+        "\n",
         "Discussion points:\n",
         "\n",
         "For the following discussion points, let's look at the code we executed in the notebook, and the code in the files that we downloaded into the girl-scouts-website folder.\n",
         "\n",
         "* Where is the code that makes this page say \"Welcome!\"?  What code would I change to make it say instead \"Welcome Girl Scouts!\"?\n",
         "* Where is the code that makes the caption under the image this specific color?  What code would I change to give it a different color?\n",
+        "* What is the code that returns this Web page when I go to the root path \"/\"?  If I had another page, what code would I change so that you would go to the other page when you go to the root path?\n",
         "* What is the code that makes this image and caption appear?  What code would I change to make more images and captions appear?\n",
-        "* What is the code that returns this Web page when I go to the root path \"/\"?  What code would I change so that you would go to this page when I go to another path, like \"/animal-shelter\"?\n",
         "* What questions do you have about how things work?  I will answer them the best I can."
       ]
     },
@@ -280,7 +282,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JQLYWlr_DoBs"
+        "id": "JQLYWlr_DoBs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "02818c8a-7d3b-437a-e0ab-2a388bdd2718"
       },
       "source": [
         "all_images = [\n",
@@ -350,8 +356,48 @@
         "print(\"dog images\")\n",
         "print_images(dog_images)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "all images:\n",
+            "{'filename': 'dog1.jpeg', 'type': 'dog', 'caption': 'Dogs do speak, but only to those who know how to listen.'}\n",
+            "{'filename': 'dog2.jpeg', 'type': 'dog', 'caption': \"The Lack Of Emotion In My Face Doesn't Mean I'm Unhappy.\"}\n",
+            "{'filename': 'cat1.jpg', 'type': 'cat', 'caption': \"How Can Mirrors Be Real If Our Eyes Aren't Real.\"}\n",
+            "{'filename': 'cat2.jpeg', 'type': 'cat', 'caption': 'Dogs come when they’re called. Cats take a message and get back to you later.'}\n",
+            "{'filename': 'dog3.jpeg', 'type': 'dog', 'caption': 'When you want to play, dogs want to play too. When you want to play, cats want to be alone.'}\n",
+            "{'filename': 'cat3.jpeg', 'type': 'cat', 'caption': \"When The First Animal Went Extinct That Should've Been A Sign.\"}\n",
+            "{'filename': 'dog4.jpeg', 'type': 'dog', 'caption': 'When Life Gives You Big Problems, Just Be Happy You Forgot All Your Little Problems.'}\n",
+            "{'filename': 'dog5.jpeg', 'type': 'dog', 'caption': 'Instagram is not the answer.'}\n",
+            "{'filename': 'dog6.jpeg', 'type': 'dog', 'caption': 'I don’t understand people who don’t touch their pets. Their cat or dog is called a pet for a reason.'}\n",
+            "{'filename': 'cat4.jpg', 'type': 'cat', 'caption': 'Cats are smarter than dogs. You can’t get eight cats to pull a sled through snow.'}\n",
+            "cat images\n",
+            "{'filename': 'dog1.jpeg', 'type': 'dog', 'caption': 'Dogs do speak, but only to those who know how to listen.'}\n",
+            "{'filename': 'dog2.jpeg', 'type': 'dog', 'caption': \"The Lack Of Emotion In My Face Doesn't Mean I'm Unhappy.\"}\n",
+            "{'filename': 'cat1.jpg', 'type': 'cat', 'caption': \"How Can Mirrors Be Real If Our Eyes Aren't Real.\"}\n",
+            "{'filename': 'cat2.jpeg', 'type': 'cat', 'caption': 'Dogs come when they’re called. Cats take a message and get back to you later.'}\n",
+            "{'filename': 'dog3.jpeg', 'type': 'dog', 'caption': 'When you want to play, dogs want to play too. When you want to play, cats want to be alone.'}\n",
+            "{'filename': 'cat3.jpeg', 'type': 'cat', 'caption': \"When The First Animal Went Extinct That Should've Been A Sign.\"}\n",
+            "{'filename': 'dog4.jpeg', 'type': 'dog', 'caption': 'When Life Gives You Big Problems, Just Be Happy You Forgot All Your Little Problems.'}\n",
+            "{'filename': 'dog5.jpeg', 'type': 'dog', 'caption': 'Instagram is not the answer.'}\n",
+            "{'filename': 'dog6.jpeg', 'type': 'dog', 'caption': 'I don’t understand people who don’t touch their pets. Their cat or dog is called a pet for a reason.'}\n",
+            "{'filename': 'cat4.jpg', 'type': 'cat', 'caption': 'Cats are smarter than dogs. You can’t get eight cats to pull a sled through snow.'}\n",
+            "dog images\n",
+            "{'filename': 'dog1.jpeg', 'type': 'dog', 'caption': 'Dogs do speak, but only to those who know how to listen.'}\n",
+            "{'filename': 'dog2.jpeg', 'type': 'dog', 'caption': \"The Lack Of Emotion In My Face Doesn't Mean I'm Unhappy.\"}\n",
+            "{'filename': 'cat1.jpg', 'type': 'cat', 'caption': \"How Can Mirrors Be Real If Our Eyes Aren't Real.\"}\n",
+            "{'filename': 'cat2.jpeg', 'type': 'cat', 'caption': 'Dogs come when they’re called. Cats take a message and get back to you later.'}\n",
+            "{'filename': 'dog3.jpeg', 'type': 'dog', 'caption': 'When you want to play, dogs want to play too. When you want to play, cats want to be alone.'}\n",
+            "{'filename': 'cat3.jpeg', 'type': 'cat', 'caption': \"When The First Animal Went Extinct That Should've Been A Sign.\"}\n",
+            "{'filename': 'dog4.jpeg', 'type': 'dog', 'caption': 'When Life Gives You Big Problems, Just Be Happy You Forgot All Your Little Problems.'}\n",
+            "{'filename': 'dog5.jpeg', 'type': 'dog', 'caption': 'Instagram is not the answer.'}\n",
+            "{'filename': 'dog6.jpeg', 'type': 'dog', 'caption': 'I don’t understand people who don’t touch their pets. Their cat or dog is called a pet for a reason.'}\n",
+            "{'filename': 'cat4.jpg', 'type': 'cat', 'caption': 'Cats are smarter than dogs. You can’t get eight cats to pull a sled through snow.'}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -367,7 +413,7 @@
         "\n",
         "### For Loops\n",
         "\n",
-        "Let's understand for loops in python better by reviewing this video: \n",
+        "Let's understand for loops in python better by reviewing this video (watch 0:00-3:15): \n",
         "\n",
         "https://www.youtube.com/watch?v=dHANJ4l6fwA&list=PLqXS1b2lRpYTI2GUM66gNqt690svYsdsD\n",
         "\n",
@@ -377,7 +423,7 @@
         "\n",
         "### Functions\n",
         "\n",
-        "Let's understand functions in python better by reviewing this video: \n",
+        "Let's understand functions in python better by reviewing this video (watch 0:00-4:10): \n",
         "\n",
         "https://www.youtube.com/watch?v=aftw0WX4oCc&list=PLqXS1b2lRpYTI2GUM66gNqt690svYsdsD\n",
         "\n",
@@ -461,7 +507,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "72phGihgHH5a"
+        "id": "72phGihgHH5a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 249
+        },
+        "outputId": "320c6427-d283-4ee3-a8dd-0cea6b2c7b37"
       },
       "source": [
         "# define a function that takes in the animal type as parameter and returns list of images of that animal type\n",
@@ -470,6 +521,7 @@
         "# your code here\n",
         "#\n",
         "\n",
+        "# test your function by setting test_images to result of calling your function with any parameter passed in\n",
         "\n",
         "# set cat_images to the result of calling your function with 'cat' passed in as argument\n",
         "\n",
@@ -483,15 +535,34 @@
         "# your code here\n",
         "#\n",
         "\n",
-        "print(\"all images:\")\n",
-        "print_images(all_images)\n",
+        "print(\"test images:\")\n",
+        "print_images(test_images)\n",
         "print(\"cat images\")\n",
         "print_images(cat_images)\n",
         "print(\"dog images\")\n",
         "print_images(dog_images)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "test images:\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-3-23095c8d859e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"test images:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m \u001b[0mprint_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_images\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"cat images\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0mprint_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcat_images\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'test_images' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
